2008-12-23  Michiel Roos <michiel@netcreators.com>

	* DAM now requires TYPO3 version 4.2.4 because of http://bugs.typo3.org/view.php?id=9511

2008-12-22  Michiel Roos <michiel@netcreators.com>

	* Fixed #9998: Add upload button (Thanks to Dan Osipov and Steffen Kamper)

2008-12-20  Michiel Roos <michiel@netcreators.com>

	* Fixed #9954 Mark All / Mark None does not work in Media->List (Thanks to Martin Holtz)
	* Fixed #9939 Category selection does not work when processing files (Thanks to Michiel Roos)

2008-12-19  Michiel Roos <michiel@netcreators.com>

	* Fixed #8209: add flv mime-type to tx_dam_types.php (Thanks to Alexander Onea)

2008-12-15  Michiel Roos <michiel@netcreators.com>

	* Fixed #9960: Move tab config to page TSconfig (Thanks to Steffen Gebert)
	* follow up patch to feature #9819, fixing two issues in the Info->Usage submodule (Thanks to Stanislas Rolland)

2008-12-15  Michiel Roos <michiel@netcreators.com>

	* Fixed #9819: DAM Usage Information Enhancement (Thanks to Stanislas Rolland)
	* Fixed #9928: Bring back Tabs! (Thanks to Dan Osipov)

2008-12-08  Michiel Roos <michiel@netcreators.com>

	* Fixed #9552: Clean Up Click Menu (Thanks to Dan Osipov)
	* Fixed #9646: DAM does not honour config['selectedListStyle'] and config['itemListStyle'] (Thanks to Uschi Renziehausen)
	* Fixed #9733: Rename, Replace file and Delete functionalities missing docheaders (Thanks to Dan Osipov)
	* Fixed #9644: DAM 1.1 is not aware of mpeg4 (Thanks to Dan Osipov and Uschi Renziehausen)
	* Fixed #9403: Missing media types: psd and odt (Thanks to Dan Osipov)
	* Fixed #9558: Lay out of DAM>list>thumbnails messed up in Opera (Thanks to Pee Jee Kruidhof and Steffen Gebert)

2008-11-17  Dan Osipov <dosipov@phillyburbs.com>

	* Fixed #9551: Inconsistent placement lang selector in docheader

2008-11-10  Benjamin Mack <benni@typo3.org>

	* Fixed #9548: No docheader for edit text (Thanks to Dan Osipov and Steffen Gebert)