@@ -118,6 +118,8 @@ class tx_dam_tsfeimgtag extends tslib_pibase {
 			}
 		}
 		unset($this->cObj->parameters['txdam']);
+		unset($this->cObj->parameters['allParams']);
+		$content = '<img '. t3lib_div::implodeAttributes($this->cObj->parameters, TRUE, TRUE) . ' />';
 		return $content;
 	}
 }
